tests/out/error/ident/undefined.out
tests/out/error/ident/undefined.in.bt:1:12 error: undefined identifier bad_name
tests/out/error/ident/undefined.in.bt:3:6 error: undefined identifier where
tests/out/error/ident/undefined.in.bt:5:2 error: undefined identifier os
tests/out/error/ident/undefined.in.bt:7:9 error: undefined identifier xyz
tests/out/error/ident/undefined.in.bt:9:0 error: undefined identifier qwe
